Make collections which ought to be immutable be so
Prevents bugs caused by a stray modification