@@ -9,13 +9,13 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 public class BoolArgumentType implements ArgumentType<Boolean> {
     private static final BoolArgumentType INSTANCE = new BoolArgumentType();
-    private static final Collection<String> EXAMPLES = Arrays.asList("true", "false");
+    private static final Collection<String> EXAMPLES = List.of("true", "false"); // Solar - immutable
 
     private BoolArgumentType() {
     }
